--- a/playground/s3/env0.yml
+++ b/playground/s3/env0.yml
@@ -16,3 +16,8 @@ deploy:
         - cp /tmp/cn/terraform /opt/tfenv/bin/terraform
         - ls -lh /opt/tfenv/bin/
         - /opt/tfenv/bin/terraform --version
+
+deploy:
+  steps:
+    after:
+      - /opt/tfenv/bin/terraform --version
