adding env0.yml custom flow to playground

--- a/playground/s3/env0.yml
+++ b/playground/s3/env0.yml
@@ -19,5 +19,6 @@ deploy:
 
 deploy:
   steps:
-    after:
-      - /opt/tfenv/bin/terraform --version
+    terraformOutput:
+      after:
+        - /opt/tfenv/bin/terraform --version
