--- a/playground/s3/env0.yml
+++ b/playground/s3/env0.yml
@@ -16,9 +16,9 @@ deploy:
         - cp /tmp/cn/terraform /opt/tfenv/bin/terraform
         - ls -lh /opt/tfenv/bin/
         - /opt/tfenv/bin/terraform --version
-    terraformPlan:
-      after:
-        - nslookup www.64891981981616435481.com
+    # terraformPlan:
+    #   after:
+    #     - nslookup www.64891981981616435481.com
     terraformOutput:
       after:
         - /opt/tfenv/bin/terraform --version
