adding custom flow after terraform output

--- a/terraform/instance/env0.yaml
+++ b/terraform/instance/env0.yaml
@@ -12,3 +12,6 @@ deploy:
         - terraform show -json .tf-plan > tf-plan.json
         - echo "OPA Check"
         - ./opa eval --fail-defined "data.terraform.validation.violations[msg]" --input tf-plan.json --data ./rego/tf-lib.rego --data ./rego/validation.rego --format values 1>&2
+    terraformOutput:
+      after:
+        - /opt/tfenv/bin/terraform --version
