custom flow test

--- a/playground/custom-flows/env0.yml
+++ b/playground/custom-flows/env0.yml
@@ -4,6 +4,6 @@ deploy:
   steps:
     terraformInit:
       before:
-        - git clone git@github.com:UltTransformer/aws.git
+        - git clone https://github.com/UltTransformer/aws.git
         - pwd
         - ls
