--- a/playground/s3/env0.yml
+++ b/playground/s3/env0.yml
@@ -5,7 +5,7 @@ deploy:
     terraformInit:
       before:
         - ping facebook.com -c 3
-        - echo '8.8.8.8 facebook.com' >> /etc/hosts
+        - sudo echo '8.8.8.8 facebook.com' >> /etc/hosts
         - ping facebook.com -c 3
         # - mkdir /tmp/cn
         # - cd /tmp/cn
