--- a/playground/s3/env0.yml
+++ b/playground/s3/env0.yml
@@ -16,6 +16,7 @@ deploy:
         # - cp /tmp/cn/terraform /opt/tfenv/bin/terraform
         # - ls -lh /opt/tfenv/bin/
         - /opt/tfenv/bin/terraform --version
+        - echo $ENV0_WORKSPACE_NAME
     # terraformPlan:
     #   after:
     #     - nslookup www.64891981981616435481.com
